Ingress/cleanerp-beta-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cleanerp-backend-ingress
  namespace: clean-erp-beta
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"   # IMPORTANT
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: test-identity.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-service-beta
                port:
                  number: 8081

    - host: test-profile.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profile-service-beta
                port:
                  number: 8082
    
    - host: test-academic.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: academic-service-beta
                port:
                  number: 8083

    - host: test-billing.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: billing-service-beta
                port:
                  number: 8084

    - host: test-retail.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retail-service-beta
                port:
                  number: 8085

    - host: test-transportation.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transportation-service-beta
                port:
                  number: 8086
    
    - host: test-payment.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service-beta
                port:
                  number: 8087

    # - host: test-metrics.cleanerp.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: metrics-service-beta
    #             port:
    #               number: 3001
    # -------------------------------
    # Academics Service (test)
    # -------------------------------
    # - host: test-academics.cleanerp.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: academics-service-beta
    #             port:
    #               number: 9310
