Ingress/cleanerp-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cleanerp-backend-ingress
  namespace: clean-erp-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"   # IMPORTANT
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: identity.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-service-prod
                port:
                  number: 8081

    - host: profile.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profile-service-prod
                port:
                  number: 8082

    - host: academic.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: academic-service-prod
                port:
                  number: 8083

    - host: billing.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: billing-service-prod
                port:
                  number: 8084

    - host: retail.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retail-service-prod
                port:
                  number: 8085

    - host: transportation.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transportation-service-prod
                port:
                  number: 8086
    
    - host: payment.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service-prod
                port:
                  number: 8087

    - host: scout.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scout-service-prod
                port:
                  number: 8088
