Ingress/cleanerp-website-beta-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clean-erp-website-beta-ingress
  namespace: clean-erp-beta
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: beta.new.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clean-erp-content-website-beta
                port:
                  number: 80
