Ingress/cleanerp-website-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clean-erp-website-prod-ingress
  namespace: clean-erp-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: new.cleanerp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clean-erp-content-website-prod
                port:
                  number: 80
