Ingress/perfectsde-website-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perfect-sde-website-prod-ingress
  namespace: perfect-sde-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: v2.perfectsde.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: perfect-sde-content-website-prod
                port:
                  number: 80
